# nil-xalt

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: config.cmake.in  cpack.cmake
docs/: 01-checks.md  02-literal.md  03-tlist.md  03-tlist_types.md  03-tlist_values.md  04-str_name.md  05-str_enum.md  06-fn_sign.md  07-fn_call.md  07-fn_make.md  08-fn_make.md  08-noisy_type.md  09-noisy_type.md  09-type_id.md  09-typed.md  10-typed.md  11-cast.md  11-errors.md  12-cast.md  13-macros.md
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/publish/nil/xalt/: Literal.hpp  TypeName.hpp  ValueName.hpp  cast.hpp  concepts.hpp  enum_name.hpp  errors.hpp  fn_create.hpp  fn_make.hpp  fn_sign.hpp  fsign.hpp  literal.hpp  make_call.hpp  noisy_type.hpp  raii.hpp  str_enum.hpp  str_name.hpp  stringify.hpp  tlist.hpp  tlist_types.hpp  tlist_values.hpp  transparent_stl.hpp  type_id.hpp  type_name.hpp  typed.hpp  value_name.hpp
src/publish/nil/xalt/detail/: tparam_name.hpp
src/test/: CMakeLists.txt  literal.cpp  str_enum.cpp  str_name.cpp  tlist.cpp  tlist_types.cpp  tlist_values.cpp
